--- a/StackoverflowServer/StackoverflowServer/packages.config
+++ b/StackoverflowServer/StackoverflowServer/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net471" />
+  <package id="AutoMapper" version="4.1.0" targetFramework="net471" />
   <package id="bootstrap" version="3.3.7" targetFramework="net471" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net471" />
   <package id="jQuery" version="3.3.1" targetFramework="net471" />
@@ -12,6 +13,7 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.5.1" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.5.1" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.5.1" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net471" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net471" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net471" />
@@ -20,8 +22,9 @@
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net471" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net471" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net471" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.4" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.4" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net471" />
